// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerticalStepper should render Vertical Step 1`] = `
<body>
  .c1 {
  text-align: left;
}

.c1.c1.c1 {
  font-weight: 500;
  font-size: 1rem;
  color: #2C232E;
  font-family: Inter;
  font-style: normal;
  white-space: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  word-wrap: break-word;
}

.c1.c1.c1:hover {
  background: initial;
}

.c1.c1.c1:active {
  background: initial;
}

.c3 {
  position: absolute;
  width: 26px;
  height: 26px;
  right: -13px;
  display: inline-block;
  background-color: #FFFFFF;
  box-sizing: border-box;
  border-radius: 50%;
  border-color: #CAC8CB !important;
  border-style: solid;
  border-width: 1px;
  -webkit-transition: 150ms cubic-bezier(.62,.28,.23,.99);
  transition: 150ms cubic-bezier(.62,.28,.23,.99);
}

.c3::before {
  content: '';
  z-index: 0;
  position: absolute;
  width: 10px;
  height: 10px;
  background: #CAC8CB !important;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
  -webkit-transition: 150ms cubic-bezier(.62,.28,.23,.99);
  transition: 150ms cubic-bezier(.62,.28,.23,.99);
}

.c2 {
  cursor: default;
  float: right;
  padding-right: 24px;
  padding-bottom: 16px;
  color: #959196 !important;
}

.c0 {
  display: block;
  clear: both;
  overflow: hidden;
  position: relative;
  overflow: visible;
}

.c0 > div {
  -webkit-transition: 150ms cubic-bezier(.62,.28,.23,.99);
  transition: 150ms cubic-bezier(.62,.28,.23,.99);
}

.c0.c0.c0 > * {
  white-space: nowrap;
}

.c0 > div {
  max-height: 0px;
  margin: 0px;
  overflow: hidden;
}

<div>
    <div
      class="c0"
    >
      <h6
        class="MuiTypography-root c1 c2 MuiTypography-subtitle1"
      />
      <span
        class="c3"
      />
    </div>
  </div>
</body>
`;

exports[`VerticalStepper should render Vertical Stepper - 1 1`] = `
.c2 {
  text-align: left;
}

.c2.c2.c2 {
  font-weight: 500;
  font-size: 1rem;
  color: #2C232E;
  font-family: Inter;
  font-style: normal;
  white-space: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  word-wrap: break-word;
}

.c2.c2.c2:hover {
  background: initial;
}

.c2.c2.c2:active {
  background: initial;
}

.c0 {
  position: relative;
  display: block;
  height: 100%;
}

.c4 {
  position: absolute;
  width: 26px;
  height: 26px;
  right: -13px;
  display: inline-block;
  background-color: #FFFFFF;
  box-sizing: border-box;
  border-radius: 50%;
  border-color: #CAC8CB !important;
  border-style: solid;
  border-width: 1px;
  -webkit-transition: 150ms cubic-bezier(.62,.28,.23,.99);
  transition: 150ms cubic-bezier(.62,.28,.23,.99);
}

.c4::before {
  content: '';
  z-index: 0;
  position: absolute;
  width: 10px;
  height: 10px;
  background: #CAC8CB !important;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
  -webkit-transition: 150ms cubic-bezier(.62,.28,.23,.99);
  transition: 150ms cubic-bezier(.62,.28,.23,.99);
}

.c3 {
  cursor: default;
  float: right;
  padding-right: 24px;
  padding-bottom: 16px;
  color: #959196 !important;
}

.c1 {
  display: block;
  clear: both;
  overflow: hidden;
  position: relative;
  overflow: visible;
}

.c1 > div {
  -webkit-transition: 150ms cubic-bezier(.62,.28,.23,.99);
  transition: 150ms cubic-bezier(.62,.28,.23,.99);
}

.c1.c1.c1 > * {
  white-space: nowrap;
}

.c1 > div {
  max-height: 0px;
  margin: 0px;
  overflow: hidden;
}

<body>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <h6
          class="MuiTypography-root c2 c3 MuiTypography-subtitle1"
        />
        <span
          class="c4"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`VerticalStepper should render Vertical Stepper - 2 1`] = `
<body>
  .c1 {
  text-align: left;
}

.c1.c1.c1 {
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 140%;
  color: #6D6D86;
  font-family: Inter;
  font-style: normal;
  white-space: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  word-wrap: break-word;
}

.c1.c1.c1:hover {
  background: initial;
}

.c1.c1.c1:active {
  background: initial;
}

.c2 {
  padding-bottom: 12px;
  color: #2C232E !important;
}

.c0 {
  cursor: pointer;
  padding-right: 28px;
  display: block;
  float: right;
  clear: both;
  position: relative;
}

<div>
    <div
      class="c0"
    >
      <p
        class="MuiTypography-root c1 c2 MuiTypography-body2"
      />
    </div>
  </div>
</body>
`;
